--- a/login/index.html
+++ b/login/index.html
@@ -18,7 +18,7 @@
 
                 <input type="submit" value= "Login">
 
-                <a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D2851201584954493&imgrefurl=https%3A%2F%2Fwww.facebook.com%2FFCKTM%2F&tbnid=f_J-_PpBcQyLQM&vet=12ahUKEwjJp6jmxbPtAhU4i0sFHU8SBEMQMygDegUIARCpAQ..i&docid=FoqEfMgOxZieYM&w=768&h=614&q=fuckoff%20images&ved=2ahUKEwjJp6jmxbPtAhU4i0sFHU8SBEMQMygDegUIARCpAQ" target="_blank">Forgot password?</a>
+                <a href="#" target="_blank">Forgot password?</a>
                 <br>
                 <a href="signup.html" target="_blank">Don't have a account?</a>
 
